# pyproject.toml for SimpleRuneDrawing created by Cookiecutter Simple Poetry Python Template @ 2026-05-24 17:24:05

[project]
name = "simplerunedrawing"
version = "0.1.0"
description = "A Simple Rune Drawing application"
license = "MIT"

authors = [
    {name = "Mark Peter Mansell",email = "mark.mansell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "pillow (>=12.2.0,<13.0.0)", 
    "typer (>=0.25.1,<0.26.0)", 
    "rich (>=15.0.0,<16.0.0)", 
    
    ]

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)", 
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "setuptools (>=82.0.1,<83.0.0)", 
    "types-setuptools (>=82.0.0.20260518,<83.0.0.0)", 
    "pyinstaller (>=6.20.0,<7.0.0)",
    "wheel (>=0.47.0,<0.48.0)", 
    "bumpversion (>=0.6.0,<0.7.0)",
    "pdoc3 (>=0.11.6,<0.12.0)", 
    "pydoctor (>=25.10.1,<26.0.0)", 

]

jupyter = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


test = [
    "pytest (>=8.4.2,<9.0.0)",
    "tox (>=4.32.0,<5.0.0)"
]

[tool.poetry]
packages = [{ include = "src/simplerunedrawing.py" }]

[tool.dotenv]
load_dotenv = "true"
ignore = "false"
location = ".env"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | doc
)/
'''

[tool.mypy]
strict = true

[tool.tox]
envs = ["py312", "py313", "py314"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pyrefly]
preset = "legacy"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
